// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`OE - Search Form as pill renders correctly 1`] = `
<jest>
  <form
    class="bcl-search-form rounded"
  >
    <div
      class="bcl-search-form__group"
    >
      <svg
        class="bi icon--xs"
      >
        <use
          xlink:href="/icons.svg#search"
        />
      </svg>
      <label
        class="form-label"
      >
        Search bar label
      </label>
      <input
        class="form-control"
        placeholder="Search"
        type="search"
      />
    </div>
  </form>
</jest>
`;

exports[`OE - Search Form renders correctly 1`] = `
<jest>
  <form
    class="bcl-search-form"
  >
    <div
      class="bcl-search-form__group"
    >
      <svg
        class="bi icon--xs"
      >
        <use
          xlink:href="/icons.svg#search"
        />
      </svg>
      <label
        class="form-label"
      >
        Search bar label
      </label>
      <input
        class="form-control"
        placeholder="Search"
        type="search"
      />
    </div>
  </form>
</jest>
`;

exports[`OE - Search Form with icon renders correctly 1`] = `
<jest>
  <form
    class="bcl-search-form"
  >
    <div
      class="bcl-search-form__group"
    >
      <svg
        class="bi icon--s icon--rotate-90"
      >
        <use
          xlink:href="/icons.svg#mouse"
        />
      </svg>
      <label
        class="form-label"
      >
        Search bar label
      </label>
      <input
        class="form-control"
        placeholder="Search"
        type="search"
      />
    </div>
  </form>
</jest>
`;

exports[`OE - Search Form with submit renders correctly 1`] = `
<jest>
  <form
    class="bcl-search-form submittable"
  >
    <div
      class="bcl-search-form__group"
    >
      <label
        class="form-label"
      >
        Search bar label
      </label>
      <input
        class="form-control"
        placeholder="Search"
        type="search"
      />
      <button
        class="btn btn-primary btn-md"
        type="button"
      >
        <span
          class="visually-hidden"
        >
          Search
        </span>
      </button>
    </div>
  </form>
</jest>
`;
